// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary with 1 expense 1`] = `
<div>
  <h1>
     
    Viewing undefined expenses totalling $10.00
     
  </h1>
</div>
`;

exports[`should correctly render ExpensesSummary with multiple expenses 1`] = `
<div>
  <h1>
     
    Viewing undefined expenses totalling $48.50
     
  </h1>
</div>
`;
